--- a/src/app/componentes/not-found-page/not-found-page.component.html
+++ b/src/app/componentes/not-found-page/not-found-page.component.html
@@ -1,3 +1,13 @@
-<p>
-  not-found-page works!
-</p>
+<div class="row">
+    <div class="col-md-6 mx-auto-center">
+      <div class"card">
+        <h1>Error</h1>
+        <h2>404 Page not Found</h2>
+        <div class="card-body">
+          <a href="" class="btn btn-primary btn-lg">
+            Go Back
+          </a>
+        </div>
+      </div>
+    </div>
+</div>
