--- a/src/app/componentes/not-found-page/not-found-page.component.html
+++ b/src/app/componentes/not-found-page/not-found-page.component.html
@@ -1,12 +1,10 @@
 <div class="row">
-    <div class="col-md-6 mx-auto-center">
-      <div class"card">
+    <div class="col-md-6 mx-auto">
+      <div class="card">
         <h1>Error</h1>
-        <h2>404 Page not Found</h2>
+        <h2>404 Page Not Found</h2>
         <div class="card-body">
-          <a href="" class="btn btn-primary btn-lg">
-            Go Back
-          </a>
+          <a href="/" class="btn btn-primary btn-lg"><i class="fa fa-home"></i>Go back</a>
         </div>
       </div>
     </div>
